# spectrojotometer

./: AUTHORS.txt  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  winebuild
.github/: FUNDING.yml
examples/: example1.cif  example1.spin
spectrojotometer/: AUTHORS.txt  README.rst  magnetic_model.py  magnetic_model.py~  model_io.py  setup.py  setup.py~  tools.py
spectrojotometer/doc/: tutorial.html  tutorial.md
spectrojotometer/examples/: -  example1-b.cif  example1-opt.out
spectrojotometer/examples/old/: ANTI2.struct  DES1.struct  conf-jhon-new2.out  confs4.in  mymodel.cif  test.cif  test.spin  test2.cif  test2.cif.save  test2.cif~
spectrojotometer/gui/: __init__.py  dialogs.py  dialogs.py~  importconfig.py  importconfig.py~  main.py  main.py~  markers.py  validators.py
spectrojotometer/spectrojotometer/: magnetic_model.py  model_io.py  model_io.py~
spectrojotometer/visualbond/: __init__.py  __init__.py~
spectrojotometer/visualbond/dialogs/: __init__.py  __init__.py~  finddialog.py~
spectrotometer/: MANIFEST  MANIFEST.in
spectrotometer/spectrojotometer/: COPYNG.txt  __init__.py~  magnetic_model.py  model_io.py~  tools.py
spectrotometer/spectrojotometer/examples/: example1-bx-resume.tmp  example1-bx.cif  example1.cif  example1.in  example1.out
spectrotometer/spectrojotometer/examples/old/: ANTI2.vesta  DES2.struct  DES3.struct  anti2.cif  anti22.cif  conf-en-arles.in  conf-jhon-new.out  conf-jhon.in  conf-jhon.out  confsdes1-.spin  (+5 more)
spectrotometer/spectrojotometer/spectrojotometer/: __init__.py  setup.py  tools.py~
(+1 files in other folders)
